test/modules/lydia/fnModNameConflict.good
fnModNameConflict.chpl:3: error: 'M1' has multiple definitions, redefined at:
  fnModNameConflict.chpl:9
